syntax = "proto3";

option csharp_namespace = "TpFinalPrestamos.WebApi.Services";

package loans; 

service LoanService {
  rpc MarkAsReturned (LoanRequest) returns (LoanResponse);
}

message LoanRequest {
  int32 loanId = 1;
}

message LoanResponse {
  bool success = 1;
  string message = 2;
}
